--- a/app/views/shared/_feed_header.html.erb
+++ b/app/views/shared/_feed_header.html.erb
@@ -8,6 +8,6 @@
       <%= @event.name.titleize if @feed_header == 'show' %>
       <%= 'Perfil' if @feed_header == 'profile' %>
       <%= 'Editar perfil' if params[:action] == 'edit' && params[:controller] == 'devise/registrations' %>
-      <%= 'Editar evento' if params[:action] == 'edit' %>
+      <%= 'Editar evento' if params[:action] == 'edit' && params[:controller] == 'events'%>
     </h2>
   </div>
