--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -12,7 +12,12 @@
     <div class="widgets-widget-container">
       <h2>Próximos Eventos</h2>
       <% @check_ins.reverse_each do |ci| %>
-        <p><%= ci.event.name.titleize %></p>
+        <div class="d-flex justify-content-between">
+          <p><%= ci.event.name.titleize %></p>
+            <%= link_to event_check_in_path(ci.event, ci), method: :delete, data: {confirm: "Cancelar presença no #{ci.event.name}?"}, class: 'text-decoration-none text-dark' do %>
+              <span class="material-icons"> close </span>
+            <% end %>
+        </div>
       <% end %>
       <h2>Explorar</h2>
       <div style="width: 100%; height: 300px;"
@@ -68,7 +73,12 @@
     <div class="widgets-widget-container">
       <h2>Próximos Eventos</h2>
       <% @check_ins.reverse_each do |ci| %>
-        <p><%= ci.event.name.titleize %></p>
+        <div class="d-flex justify-content-between">
+          <p><%= ci.event.name.titleize %></p>
+          <%= link_to event_check_in_path(ci.event_id, ci), method: :delete, data: {confirm: "Cancelar presença no #{ci.event.name}?"}, class: 'text-decoration-none text-dark' do %>
+            <span class="material-icons"> close </span>
+          <% end %>
+        </div>
       <% end %>
     </div>
   </div>
