--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -14,7 +14,7 @@
   color: white !important;
   &:hover{
     background-color:#43b071;
-    color: black !important;
+    color: white !important;
   }
 }
 
