--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -117,7 +117,8 @@ body {
 /* tweet box */
 .publish-box-input img {
   border-radius: 50%;
-  height: 40px;
+  height: 50px;
+  width: 50px;
 }
 
 .publish-box {
