--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div id="message-<%= message.id %>">
-  <div class="message-chat <%= current_user == message.user ? 'message-current' : 'message-friend' %>">
-    <%= image_tag url_for(message.user.photo), class: "avatar-chat" if message.user == current_user %>
-    <div class="d-flex gap-chat <%= 'justify-content-end' unless current_user == message.user  %> w-100 align-items-center">
+  <div class="message-chat message-user-<%= message.user.id %>">
+    <%= image_tag url_for(message.user.photo), class: "avatar-chat" %>
+    <div class="d-flex gap-chat w-100 align-items-center">
 
       <small class="d-flex flex-column">
         <strong><%= message.user.username %></strong>
@@ -9,7 +9,7 @@
         <p><%= message.content  %></p>
       </small>
 
-      <%= image_tag url_for(message.user.photo), class: "avatar-chat" unless current_user == message.user  %>
+
     </div>
   </div>
 </div>
