mexi na pagina sing up

--- a/app/assets/stylesheets/components/_devise_pages.scss
+++ b/app/assets/stylesheets/components/_devise_pages.scss
@@ -15,3 +15,11 @@
     color:white !important;
   }
 }
+
+.form-inputs {
+  justify-content: space-around;
+}
+
+.devise-page #auth {
+  max-width: 40vw;
+}
