--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,47 +11,63 @@
             <% end %>
           </h1>
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <h3 class="mb-3">Cadastre-se</h3>
             <%= f.error_notification %>
-            <div class="form-inputs">
+            <div class="form-inputs row">
+            <div class="col-11">
               <%= f.input :email,
                 label: false,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" },
                 placeholder: "Email"%>
-              <%= f.input :password,
-                label: false,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" },
-                placeholder: "Senha"%>
-              <%= f.input :password_confirmation,
-                label: false,
-                required: true,
-                input_html: { autocomplete: "new-password" },
-                placeholder: "Confirmar senha"%>
-              <%= f.input :first_name,
-                label: false,
-                required: true,
-                input_html: { autocomplete: "given-name" },
-                placeholder: "Nome" %>
-              <%= f.input :last_name,
-                label: false,
-                required: true,
-                input_html: { autocomplete: "family-name" },
-                placeholder: "Sobrenome" %>
-              <%= f.input :username,
-                label: false,
-                required: true,
-                input_html: { autocomplete: "username" },
-                placeholder: "Username" %>
-              <%= f.input :bio,
-                required: true,
-                label: false,
-                placeholder: "Bio" %>
-              <%= f.input :photo, as: :file, label: 'Foto de perfil' %>
-              <%= f.button :submit, "Sign up", class: "button" %>
+            </div>
+              <div class="col-5">
+                <%= f.input :password,
+                  label: false,
+                  required: true,
+                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password" },
+                  placeholder: "Senha"%>
+              </div>
+              <div class="col-5">
+                <%= f.input :password_confirmation,
+                  label: false,
+                  required: true,
+                  input_html: { autocomplete: "new-password" },
+                  placeholder: "Confirmar senha"%>
+              </div>
+              <div class="col-5">
+                <%= f.input :first_name,
+                  label: false,
+                  required: true,
+                  input_html: { autocomplete: "given-name" },
+                  placeholder: "Nome" %>
+              </div>
+              <div class="col-5">
+                <%= f.input :last_name,
+                  label: false,
+                  required: true,
+                  input_html: { autocomplete: "family-name" },
+                  placeholder: "Sobrenome" %>
+              </div>
+              <div class="col-5">
+                <%= f.input :username,
+                  label: false,
+                  required: true,
+                  input_html: { autocomplete: "username" },
+                  placeholder: "Username" %>
+              </div>
+              <div class="col-5">
+                <%= f.input :bio,
+                  required: true,
+                  label: false,
+                  placeholder: "Bio" %>
+              </div>
+              <div class="col-11">
+                <h6 class="pb-2">Foto de perfil:</h6>
+                <%= f.input :photo, as: :file, label: false %>
+                <%= f.button :submit, "Sign up", class: "button" %>
+              </div>
             </div>
             <div class="flex justify-content-center mt-2 hover-session">
               <%= link_to "Já tem uma conta? Faça login", new_user_session_path %>
