--- a/app/assets/stylesheets/components/_devise_pages.scss
+++ b/app/assets/stylesheets/components/_devise_pages.scss
@@ -20,9 +20,9 @@
   justify-content: space-around;
 }
 
-.devise-page #auth {
-  max-width: 40vw;
-}
+//.devise-page #auth {
+//  max-width: 40vw;
+//}
 
 .user-sign-in {
   padding-bottom: 20px !important;
