--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,71 +1,72 @@
 <!-- publishbox  -->
-<div class="publish-box w-100">
-  <div class="publish-box-input">
-    <%= cl_image_tag current_user.photo.key%>
-    <%= simple_form_for @post do |f| %>
-      <%= f.input :content, label: false, placeholder: 'Escreva algo sobre o evento', input_html: {class: 'ps-3 text-holder'} %>
-      <label class="material-icons image-upload d-flex align-items-center">
-        image
-        <%= f.input :photos, label: false, as: :file, input_html: { multiple: true, class: "d-none" }%>
-        <h6 class="m-0 ps-1" id="upload-text">Foto/Imagem</h6>
-      </label>
-      <%= f.association :event, label: false, selected: '', collection: @check_in_event %>
-    </div>
-    <%= f.submit 'POSTAR', class: 'publish-box-publish-button-post-home' %>
-  <% end %>
-</div>
-
-<% @posts.each_with_index do |post, index| %>
-    <div class="<%= index.even? ? 'post-even' : 'post-odd' %>">
-      <%= link_to profile_path(post.user) do%>  
-        <div class="post-avatar">
-          <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
+<div class="row">
+  <div class="col-12">
+    <div class="publish-box w-100">
+      <div class="publish-box-input">
+        <%= cl_image_tag current_user.photo.key%>
+        <%= simple_form_for @post do |f| %>
+          <%= f.input :content, label: false, placeholder: 'Escreva algo sobre o evento', input_html: {class: 'ps-3 text-holder'} %>
+          <label class="material-icons image-upload d-flex align-items-center">
+            image
+            <%= f.input :photos, label: false, as: :file, input_html: { multiple: true, class: "d-none" }%>
+            <h6 class="m-0 ps-1" id="upload-text">Foto/Imagem</h6>
+          </label>
+          <%= f.association :event, label: false, selected: '', collection: @check_in_event %>
         </div>
-      <%end%>
-    <%= link_to post_path(post) do%>
-      <div class="post-body">
-        <div class="post-header">
-          <div class="post-header-text">
-            <h3>
-              <%= User.where(id: post.user_id).first.first_name %>
-              <span class="post-header-special"
-                ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %>
-                <i class="fas fa-chevron-right feed-arrow"></i><i class="fas fa-chevron-right feed-arrow"></i>
-                <span class = "event-name"> <%= post.event.name.downcase %> </span> </span
-              >
-            </h3>
+        <%= f.submit 'POSTAR', class: 'publish-box-publish-button-post-home' %>
+      <% end %>
+    </div>
+    <% @posts.to_enum.with_index.reverse_each do |post, index| %>
+      <div class="<%= index.even? ? 'post-even' : 'post-odd' %>">
+        <%= link_to profile_path(post.user) do%>
+          <div class="post-avatar">
+            <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
           </div>
-          <div class="post-header-description">
-            <p><%= post.content %></p>
-            <% if post.photos.attached? %>
-              <% if post.photos.count > 1 %>
-                <div id="carousel<%=post.id%>" class="carousel slide posts-imgs" data-bs-ride="carousel">
-                  <div class="carousel-inner">
-                    <% post.photos.each_with_index do |photo, index| %>
-                      <div class="carousel-item <%='active' if index == 0%>" data-bs-interval="5000">
-                        <%= cl_image_tag photo.key, height: 400, width: 400, crop: :fill %>
+        <%end%>
+        <%= link_to post_path(post) do%>
+          <div class="post-body">
+            <div class="post-header">
+              <div class="post-header-text">
+                <h3>
+                  <%= User.where(id: post.user_id).first.first_name %>
+                  <span class="post-header-special"><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %>
+                    <i class="fas fa-chevron-right feed-arrow"></i><i class="fas fa-chevron-right feed-arrow"></i>
+                    <span class = "event-name"> <%= post.event.name.downcase %> </span> </span>
+                </h3>
+              </div>
+              <div class="post-header-description">
+                <p><%= post.content %></p>
+                <% if post.photos.attached? %>
+                  <% if post.photos.count > 1 %>
+                    <div id="carousel<%=post.id%>" class="carousel slide posts-imgs" data-bs-ride="carousel">
+                      <div class="carousel-inner">
+                        <% post.photos.each_with_index do |photo, index| %>
+                          <div class="carousel-item <%='active' if index == 0%>" data-bs-interval="5000">
+                            <%= cl_image_tag photo.key, height: 400, width: 400, crop: :fill %>
+                          </div>
+                        <% end %>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel<%=post.id%>" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel<%=post.id%>" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
                       </div>
-                    <% end %>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel<%=post.id%>" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carousel<%=post.id%>" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-                </div>
-              <%else%>
-                  <%= cl_image_tag post.photos.first.key, class: "carousel-inner carousel-item active" %>
-              <% end %>
-              <p class = "published-event-with-photo">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
-            <% else %>
-              <p class = "published-event">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
-            <% end %>
+                    </div>
+                  <%else%>
+                    <%= cl_image_tag post.photos.first.key, class: "carousel-inner carousel-item active" %>
+                  <% end %>
+                  <p class = "published-event-with-photo">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
+                <% else %>
+                  <p class = "published-event">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
+                <% end %>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-  <% end %>
-<% end %>
+      <% end %>
+    <% end %>
+  </div>
+</div>
