--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -26,6 +26,8 @@
     <div class="sidebar-option">
       <span class="material-icons"> mail_outline </span>
       <h2>Mensagens</h2>
+            <span class="badge"><%= @chatrooms.count if @chatrooms %></span>
+
     </div>
   <% end %>
   <%= link_to profile_path(current_user), class: 'text-decoration-none text-dark' do %>
