correção no codigo e refatoração

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -70,7 +70,7 @@
               </div>
             </div>
             <div class="flex justify-content-center mt-2 hover-session">
-              <%= link_to "Já tem uma conta? Faça login", new_user_session_path %>
+              <%= link_to "Já tem uma conta? Faça login", new_user_session_path, class: "underline-text" %>
             </div>
           <% end %>
         </div>
