--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,19 @@
   height: 566px;
 }
 
-.hover-session:hover{
-  text-decoration: underline;
+.underline-text {
+  display: inline-block;
+  padding-bottom:2px;
+  background-image: linear-gradient(#000, #000);
+  background-position: 0 100%; /*OR bottom left*/
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition:
+    background-size 0.3s,
+    background-position 0s 0.3s; /*change after the size immediately*/
+}
+
+.underline-text:hover {
+  background-position: 100% 100%; /*OR bottom right*/
+  background-size: 100% 2px;
 }
