--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -117,8 +117,9 @@
       <p>
         <% if @event.check_ins.count > 1 %>
           <% x = 0 %>
+          <% y = false  %>
           <% @check_ins.last(3).reverse_each do |c| %>
-            <%= c.user.first_name.titleize %><%= @check_ins.count == 2 && x < 1 ? "e" : ","  %>
+            <%= c.user.first_name.titleize %><%= @check_ins.count == 2 && x < 1 ? " e" : ","  %><%= ' e' if @check_ins.count == 2 && x == 1 && y %>
             <% x += 1 %>
           <% end %>
           <%= "confirmaram presença" if @check_ins.count < 3 && @check_ins.count > 0 %>
