correção de bug

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -65,7 +65,7 @@
               </div>
               <div class="col-11">
                 <h6 class="pb-2">Foto de perfil:</h6>
-                <%= f.input :photo, as: :file, label: false %>
+                <%= f.input :photo, as: :file, label: false, required: true %>
                 <%= f.button :submit, "Sign up", class: "button" %>
               </div>
             </div>
