--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,34 +7,36 @@
     </div>
   </div>
   <% @filtered_events.select do |event| %>
-    <div class="courses-container">
-      <div class="course">
-        <div class="course-preview">
-          <h6><%= event.category %></h6>
-          <%= cl_image_tag event.photo.key, class: 'rounded ms-3', height: 100, width: 100, crop: :fill %>
-          <%= link_to event_path(event), class: 'text-decoration-none' do %>
-            <div class="more-info-button">
-              <p>SAIBA MAIS <i class="fas fa-chevron-right"></i></p>
-            </div>
-          <% end %>
-        </div>
-        <div class="course-info">
-          <div class="progress-container">
-            <% if event.check_ins.count.positive? %>
-              <span class="progress-text">
-                <%= event.check_ins.count %>
-                <%= event.check_ins.count > 1 ? 'pessoas vão comparecer' : 'pessoa vai comparecer' %>
-              </span>
+    <% if event.present? %>
+      <div class="courses-container">
+        <div class="course">
+          <div class="course-preview">
+            <h6><%= event.category %></h6>
+            <%= cl_image_tag event.photo.key, class: 'rounded ms-3', height: 100, width: 100, crop: :fill %>
+            <%= link_to event_path(event), class: 'text-decoration-none' do %>
+              <div class="more-info-button">
+                <p>SAIBA MAIS <i class="fas fa-chevron-right"></i></p>
+              </div>
             <% end %>
           </div>
-          <h6><%= I18n.l(event.date, format: :curta) %></h6>
-          <h4><%= event.name.titleize %></h4>
-          <%= link_to event_path(event), class: 'text-decoration-none text-dark' do %>
-            <button class="btn-event">VER</button>
-          <% end %>
+          <div class="course-info">
+            <div class="progress-container">
+              <% if event.check_ins.count.positive? %>
+                <span class="progress-text">
+                  <%= event.check_ins.count %>
+                  <%= event.check_ins.count > 1 ? 'pessoas vão comparecer' : 'pessoa vai comparecer' %>
+                </span>
+              <% end %>
+            </div>
+            <h6><%= I18n.l(event.date, format: :curta) %></h6>
+            <h4><%= event.name.titleize %></h4>
+            <%= link_to event_path(event), class: 'text-decoration-none text-dark' do %>
+              <button class="btn-event">VER</button>
+            <% end %>
+          </div>
         </div>
       </div>
-    </div>
+    <% end %>
   <% end %>
   <%= link_to "Novo evento", new_event_path, class: "btn-event text-decoration-none text-white" %>
 </div>
