--- a/app/assets/stylesheets/components/_devise.scss
+++ b/app/assets/stylesheets/components/_devise.scss
@@ -88,6 +88,8 @@
     background-color: white;
     border: 1px solid #dbdbdb;
     width: fit-content;
+    height: fit-content;
+
   }
 
   #auth {
