--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,7 +1,10 @@
 <ul class="list-group m-0">
   <% @notifications.each do |notification| %>
     <li class="list-group-item ">
-      <%= image_tag url_for(notification.user.photo), class: "avatar-large" %>
+      <% follower = User.find(notification.follower_id) %>
+      <%= link_to profile_path(follower), class: "" do %>
+        <%= image_tag url_for(follower.photo), class: "avatar-large" %>
+      <% end %>
       <h5 ><%= notification.content %></h5>
       <p><%= I18n.l(notification.created_at, format: :short) %></p>
     </li>
