--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -7,7 +7,7 @@
       <label class="material-icons image-upload d-flex align-items-center">
         image
         <%= f.input :photos, label: false, as: :file, input_html: { multiple: true, class: "d-none" }%>
-        <h6 class="m-0 ps-1" id="upload-text">Foto/Imagem</h6>
+        <h6 class="m-0 ps-1" id="">Foto/Imagem</h6>
       </label>
   </div>
       <%= f.submit 'POSTAR', class: 'publish-box-publish-button-post' %>
