--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
       <label class="material-icons image-upload d-flex align-items-center">
         image
         <%= f.input :photos, label: false, as: :file, input_html: { multiple: true, class: "d-none" }%>
-        <h6 class="m-0 ps-1" id="upload-text">Foto/Imagem</h6>
+        <h6 class="m-0 ps-1" id="">Foto/Imagem</h6>
       </label>
       <%= f.association :event, label: false, selected: '', collection: @check_in_event %>
     </div>
