--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -6,7 +6,7 @@
         <%= image_tag url_for(follower.photo), class: "avatar-large" %>
       <% end %>
       <h5 ><%= notification.content %></h5>
-      <p><%= I18n.l(notification.created_at, format: :short) %></p>
+      <p class="data-notification"><%= I18n.l(notification.created_at, format: :short) %></p>
     </li>
   <%end%>
 </ul>
